<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/changeDay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shed_how_chDay" />
    
	<Button
        android:id="@+id/addRaw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shed_how_add" />
	
	<Button
        android:id="@+id/close"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shed_click_cancel" />
	
</LinearLayout>