<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"  >

	<ScrollView 
	    android:id="@+id/scrollView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_above="@+id/okButton" >
	
	    <RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"  >
	       
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:gravity="center|center_vertical"
		        android:text="@string/shed_edit_title" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/textView1"
		        android:text="@string/shed_edit_start" />
		
		    <EditText
		        android:id="@+id/timeStart"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/textView2"
				android:text="" >
		    </EditText>
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/timeStart"
		        android:text="@string/shed_edit_end" />
		
		    <EditText
		        android:id="@+id/timeEnd"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/textView3"
		        android:text="" />
		
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/timeEnd"
		        android:text="@string/shed_edit_name" />
		
		    <EditText
		        android:id="@+id/name"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/textView4"
		        android:text="" />
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/name"
		        android:text="@string/shed_edit_teacher" />
		
		    <EditText
		        android:id="@+id/teacher"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/textView5"
		        android:text="" />
			<TextView
		        android:id="@+id/textView6"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/teacher"
		        android:text="@string/shed_edit_place" />
		
		
		    <EditText
		        android:id="@+id/place"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/textView6"
		        android:text="" />
		
		    <CheckBox
		        android:id="@+id/window"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/place"
		        android:visibility="invisible"
		        android:text="@string/shed_edit_isWindow" />
		
		    <CheckBox
		        android:id="@+id/sameOn2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/window"
		        android:visibility="invisible"
		        android:text="@string/shed_edit_secondWeek" />
			
		    <CheckBox
		        android:id="@+id/break5min"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/sameOn2"
		        android:visibility="invisible"
		        android:text="@string/shed_edit_shortBreak" />
	  	</RelativeLayout>
	   	
	</ScrollView>
	<Button
        android:id="@+id/okButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ok" />
</RelativeLayout>