<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout01"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:gravity="center"
	android:layout_width="wrap_content" android:background="@color/about_listbg">
	<ImageView android:id="@+id/about_icon"
		android:layout_alignParentLeft="true" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:src="@drawable/about_icon" />
	<TextView android:id="@+id/TextView01" android:textStyle="bold"
		android:layout_width="wrap_content" android:text="@string/About"
		android:textSize="25sp" android:layout_toRightOf="@+id/about_icon"
		android:gravity="center" android:layout_height="wrap_content"
		android:layout_marginTop="20dp" android:textColor="@color/about_title"
		android:layout_alignParentRight="true">
	</TextView>
	<TextView android:id="@+id/TextView03" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/About_text"
		android:layout_below="@id/about_icon" android:textColor="@color/white"
		android:textStyle="bold" android:textSize="16sp"
		android:layout_alignParentRight="true" android:gravity="center_horizontal"
		android:background="#ff808080" android:layout_alignParentLeft="true">
	</TextView>
	<ExpandableListView android:id="@+id/android:list"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:background="@color/about_listbg" android:layout_below="@id/TextView03"
		android:layout_above="@+id/linearLayout1" />

	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:background="#ff808080"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >

		<Button android:layout_height="wrap_content" android:id="@+id/OkButton"
			android:layout_width="100dp" android:text="OK"></Button>
	</LinearLayout>
	<TextView android:id="@+id/TextView02" android:text="@string/About_ver"
		android:textSize="13sp" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:textStyle="italic"
		android:layout_below="@+id/TextView01" android:layout_alignLeft="@+id/TextView01"
		android:layout_alignRight="@+id/TextView01" android:gravity="center_horizontal"
		android:textColor="@color/about_title"></TextView>

</RelativeLayout>
