<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/mail_page_now" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="right|center_vertical"
        android:text="" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="" />

    <TextView
        android:id="@+id/event_timer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:gravity="right|center_vertical"
        android:text="" />

    <TextView
        android:id="@+id/separator0"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:text="" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/separator0"
        android:gravity="center|center_vertical"
        android:background="@color/news_from"
        android:textColor="@color/white"
        android:text="@string/mail_page_shedule" />
	<TextView
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:text="" />
    <ListView
        android:id="@+id/scheduList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/separator1"
        android:layout_above="@+id/separator2"
        android:orientation="vertical" >

    </ListView>
    
	<TextView
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/editButton"
        android:layout_alignParentLeft="true"
        android:background="@color/news_from"
        android:text="" />
	
	<Button
	    android:id="@+id/editButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/mail_page_edit" />

</RelativeLayout>